assets/css/screen.less
@box-background-color: #ffffff;
@button-offset: 20px;
@short-transition-duration: 0.2s;
@medium-transition-duration: 0.5s;
@long-transition-duration: 1s;

body {
  font-family: Roboto, sans-serif;
  padding: 0px;
  margin: 0px;
}

/* Mixin for styling boxes with drop shadows */
.drop-shadow-box() {
  background-color: @box-background-color;
  padding: 0 !important;
  border-radius: 2px !important;
  box-shadow: rgba(0, 0, 0, 0.117647) 0px 1px 6px, rgba(0, 0, 0, 0.117647) 0px 1px 4px;
}

/* Root container for React */
#root {
  width: 100%;
  height: 100%;
  position: relative;
}

/* Main canvas area of the root container */
#canvas {
  width: 100%;
  height: 100%;
  position: relative;
}

/* Footer in which the lower buttons are placed */
#footer {
  width: 100%;
  position: absolute;
  bottom: 0;
  padding: @button-offset;
}

/* Map in the background of the main screen */
#map {
  width: 100%;
  height: 100%;
}

/* Widgets placed over the map */
.widget {
  position: absolute !important;

  /* Title of widget */
  .title {
    font-size: 10pt;
    font-weight: bold;
    text-transform: uppercase;
    line-height: 24px;
    height: 24px;
  }
  /* Action bar of the widget (overlaid on top of it) */
  .widget-action-bar {
    position: absolute;
    right: 0px;
    top: 0px;
    transition: opacity @short-transition-duration;
    opacity: 0;
  }
  &:hover .widget-action-bar {
    opacity: 1;
  }
}

/* Styling for OpenLayers controls */
.ol-control {
  .drop-shadow-box();

  button {
    background-color: white;
    color: black;
    margin: 0px;            /* to fit the Material design better */
    width: 24px;            /* 24px because Material buttons are 48px */
    height: 24px;

    &:hover, &:focus {
      background-color: white;
      color: black;
    }
  }

  &.ol-full-screen {
    right: 20em;
  }

  &.ol-overviewmap {
    bottom: 4em;
  }

  &.ol-rotate {
    top: 4em;
    right: auto;
    left: 2.5em;
  }

  &.ol-zoomslider {
    top: 4em;
  }

  &.ol-zoom-extent {
    top: 4em;
  }
}

/* OpenLayers scale line should have a half-transparent "box styling" */
.ol-scale-line {
  .drop-shadow-box();
  background-color: fade(@box-background-color, 75%);
  bottom: 0.5em;
}
.ol-scale-line-inner {
  color: black;
  border-color: black;
}

.ol-dragbox, .ol-dragzoom {
  background-color: rgba(0, 136, 255, 0.25);
  border: 1px solid #08f;
}

/* OpenLayers attribution widget should be in the lower left corner
* by default */
.ol-attribution {
  right: auto;
  bottom: 2.4em;
  left: 0.5em;
}

.ol-mouse-position {
  .drop-shadow-box();

  top: auto;
  right: 20em;
  bottom: 0.5em;

  .mouse-coordinates {
    margin: 10px;
  }
}

